added frontend port name

--- a/contrib/chart/backstage/templates/frontend-deployment.yaml
+++ b/contrib/chart/backstage/templates/frontend-deployment.yaml
@@ -55,8 +55,10 @@ metadata:
 
 spec:
   ports:
-    - port: 80
+    - name: http
+      port: 80
       targetPort: {{ .Values.frontend.containerPort }}
+      protocol: TCP
 
   selector:
     app: backstage
